nuevos cambios en el ecommerce

--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Barra de Navegación</title>
     <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="/css/productos.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Roboto:wght@400;700&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -56,11 +59,51 @@
             <li><img src="img/productos/teazul.jpg" alt=""></li>
             <li><img src="img/productos/unete.jpg" alt=""></li>
         </ul>
-            
         </div>
     </div>
-    </div>
+</div>
+<br><br>
+<div class="divider"></div>
+    <h1>PRODUCTOS DESTACADOS</h1>
+    <div id="product-container" class="productos-destacados"></div>
 
+    <br>
+    <div class="divider"></div>
+
+    <h1>ALIMENTOS</h1>
+    <section id="food-section" class="productos-destacados"></section>
+
+    <br>
+    <div class="divider"></div>
+    <h1>CUIDADO PERSONAL</h1>
+    <section id="selfcare-section" class="productos-destacados"></section>
+
+    <br>
+    <div class="divider"></div>
+    <h1>COSMETICOS</h1>
+    <section id="cosmetics-section" class="productos-destacados"></section>
+
+    <br>
+    <div class="divider"></div>
+    <h1>EQUIPO</h1>
+    <section id="equipment-section" class="productos-destacados"></section>
+
+    <br>
+    <div class="divider"></div>
+    <h1>ACCESORIOS</h1>
+    <section id="accessories-section" class="productos-destacados"></section>
+<br><br>
+    <footer>
+        <div class="footer-bottom">
+            <div class="containerfo">
+                <div class="footer-right">
+                    <span class="footer-copyrigth">© 2024 NICOL. All rights reserved.</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
-
+<script src="card.js"></script>
+<script src="/JS/producto.js"></script>
 </html>
